# budget-data

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  Makefile  PROJECT_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  dev.sh  docker-compose.yml  render.yaml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.zig  build.zig.zon  setup.sh
api/migrations/: .gitkeep
api/src/: db.rs  db.zig  errors.zig  handlers.rs  handlers.zig  main.rs  main.zig  models.rs  openapi.rs  query_params.rs  query_params.zig  utils.zig
api/src/db/: connection.rs  mod.rs
api/src/models/: mod.rs  v1.rs
api/src/parsers/: mod.rs
api/src/routes/: balance.rs  disburse.rs  events.rs  fund.rs  fund_flows.rs  initialize.rs  mod.rs  projects.rs  stats.rs  transactions.rs  treasury.rs  treasury_addresses.rs  treasury_contracts.rs  treasury_operations.rs  utxos.rs  vendor_contracts.rs  withdraw.rs
api/src/routes/v1/: events.rs  milestones.rs  mod.rs  statistics.rs  treasury.rs  vendor_contracts.rs
api/src/services/: event_processor.rs  mod.rs  sync.rs
database/: README.md
docs/: API.md  ARCHITECTURE.md  METRICS.md  PAGINATION.md  QUERY_PARAMETERS.md  VENDOR_CONTRACT_EXTRACTION.md  architecture.md
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
indexer/: .gitignore  Dockerfile  Dockerfile.render  README.md  SETUP.md  add-missing-tables.sql  application.properties  application.render.properties  create-yaci-tables.sql  docker-entrypoint.sh  download-jar.sh  (+4 more)
(+82 files in other folders)
